--- a/answer/index-ans.html
+++ b/answer/index-ans.html
@@ -12,16 +12,34 @@
     <main>
       <div class="step-box">
         <div class="step-num">step1</div>
-        <div class="step-img"></div>
+        <div class="step-img1"></div>
         <h3 class="title">タイトルが入ります</h3>
         <p class="text">
           文章が入ります。文章が入ります。文章が入ります。
           文章が入ります。文章が入ります。文章が入ります。
           文章が入ります。文章が入ります。文章が入ります。
         </p>
-        
       </div>
-
+      <div class="step-box">
+        <div class="step-num">step2</div>
+        <div class="step-img2"></div>
+        <h3 class="title">タイトルが入ります</h3>
+        <p class="text">
+          文章が入ります。文章が入ります。文章が入ります。
+          文章が入ります。文章が入ります。文章が入ります。
+          文章が入ります。文章が入ります。文章が入ります。
+        </p>
+      </div>
+      <div class="step-box">
+        <div class="step-num">step3</div>
+        <div class="step-img3"></div>
+        <h3 class="title">タイトルが入ります</h3>
+        <p class="text">
+          文章が入ります。文章が入ります。文章が入ります。
+          文章が入ります。文章が入ります。文章が入ります。
+          文章が入ります。文章が入ります。文章が入ります。
+        </p>
+      </div>
     </main>
 
     <footer></footer>
